# SAMP

./: README.md
Data/: main_A.mat  main_B.mat  main_C.csv  main_C.mat
Grape/: CMakeLists.txt  Toys_Grape6.cpp
Grape/LACTIC/: CMakeLists.txt  LACTIC.h  getDataFromInput.cpp  readCSV.cpp  vector2array16.cpp  vector2array7.cpp
Grape/MILK/: CMakeLists.txt  MILK.h  cosInterp.cpp  desiredFrameR.cpp  linearTransError.cpp  quatSubtraction.cpp  vectorK2Matrix6.cpp  vectorP2arrayCarte.cpp  velRegulate.cpp
Grape/TEA/: CMakeLists.txt  Grape6.cpp  Grape6.h  Redgrape10.cpp  Redgrape10.h  Sweetness5S0.cpp  Sweetness5S0.h
Greengrape/: UNCORK.m  main_A.m  main_B.m  main_C.m
Greengrape/@BlackTea0/: BlackTea0.m  FW_autoTermine.m  FW_standard.m  LQTBatch.m  LQTIterative.m  durationAssign_Abs.m  patchHSMM.m  plot3HSMM.m  setSigma.m
Greengrape/@BlackTea1/: BlackTea1.m  FW_autoTermine.m  FW_autoTermine2.m  FW_autoTermine3.m  constructPhi1.m  copy.m  eval_StandardFW.m  plot3HSMMPQ.m  sort.m  trajGen_GMR.m  trajGen_LQT.m
Greengrape/@Greengrape5S1/: Greengrape5S1.m  calculatePureTwist.m  clearStationaryDemo.m  constructDynaDemos.m  desiredFrame.m  evaluate.m  figureA12.m  figureA123.m  figureA3.m  figureDemosH.m  figureForceBar.m  figureQuat3Sphere.m  genAppTraj.m  genAssTraj.m  genAssTraj_dualPolicy.m  learnGoal_FinalPoses.m  learnPreAlignment.m  learnPreAssembly_Repe.m  learnSAMP_DC_HSMM.m  learnSAMP_GMM_HSMM.m  readCSV.m  stateSeqRegulate.m  tailorA1A3Demo.m  writeCSV.m  writeCSVTrajectory.m
Greengrape/@HSMMZero/: EMHMMZero.m  GaussPDF.m  HSMMZero.m  dataRegulate.m  kMeans.m  (+9 more)
(+53 files in other folders)
